env/code_53f04db02d564/stderr.txt
Traceback (most recent call last):
  File "main.py", line 3, in <module>
    s = input()
  File "<string>", line 1
    11 15
        ^
SyntaxError: invalid syntax
